--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Word Learner</title>
+    <link rel="stylesheet" href="index.css">
+    <title>Lexi</title>
 </head>
 
 <body>
